--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,7 @@
     padding: 10px 10px 12px 10px;
     background-color: #caf0f8;
     border-radius: 15%;
+    transition: 0.5s ease 0.2s;
     
 }
 .hero{
@@ -89,3 +90,9 @@ p{
 .options{
     transition: 0.5s ease 0.1s;
 }
+.username:hover{
+    color: white;
+    background-color: #3a86ff;
+    cursor: pointer;
+}
+
