--- a/styles.css
+++ b/styles.css
@@ -1,98 +1,33 @@
 *{
-    margin:0;
-    padding:0;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    /* background-color: #edede9; */
+    margin: 0;
+    box-sizing: border-box;
 }
-:root{
-    --c1: #fcfcfc;
-    --c2: #ffffff;
+.header{
+    background-color: rgba(128, 128, 128, 0.25);
+    text-align: center;
+    font-family: 'Courier New', Courier, monospace;
 }
-.navigation{
-    list-style: none;
+.greeting{
+    padding: 3vh;
+}
+.boxes{
     display: flex;
-    padding: 0vw 20vw;
-    gap: 0px 15px;
     justify-content: center;
+    padding: 20vh;
+    gap: 5vh;
 }
-.nav{
+.box{
+    padding: 10vh;
+    border: solid 1px rgba(0, 0, 0, 0.15);
+    box-shadow: 0.5px 0.5px 10px rgba(0, 0, 0, 0.15);
+    width: 25vh;
     display: flex;
-    flex-flow: nowrap row;
     justify-content: center;
     align-items: center;
-    padding: 10px;
-    background-color: var(--c2);
+    align-self: center;
 }
-
-.logo{
-    /* background-color: aqua; */
-    font-size: x-large;
-    color: rgb(89, 87, 87);
-}
-.username{
-    border: solid 1px #caf0f8;
-    color: #3a86ff;
-    padding: 10px 10px 12px 10px;
-    background-color: #caf0f8;
-    border-radius: 15%;
-    transition: 0.5s ease 0.2s;
-    
-}
-.hero{
-    background-color: var(--c1);
+.form{
     display: flex;
-    flex-flow: nowrap row;
-    column-gap: 10vb;
-    justify-content: space-around;
+    justify-content: center;
+    gap: 10px;
 }
-p{
-    color: rgb(90, 89, 89);
-}
-.head{
-    font-size: xxx-large;
-}
-.left{
-    padding: 10vb;
-    font-size: large;
-}
-.right{
-    padding:10vb;
-}
-.middle{
-    padding:5vb;
-}
-.button{
-    font-size: large;
-    margin-top:2rem;
-    padding:1.5rem 1.5rem 1.7rem 1.5rem;
-    background-color: #3a86ff;
-    border: solid 1px #3a86ff;
-    color: white;
-    border-radius: 10%;
-    transition: 0.5s ease 0.2s;
-}
-.content{
-    margin-top: 1.5rem;
-    line-height: 175%;
-    color: rgb(106, 105, 105);
-}
-.button:hover{
-    background-color: #00a8e8;
-    transform: scale(1.05);
-    color: white;
-    cursor: pointer;
-}
-.options:hover{
-    color: #3a86ff;
-    cursor: pointer;
-    transform: translateY(-2px);
-}
-.options{
-    transition: 0.5s ease 0.1s;
-}
-.username:hover{
-    color: white;
-    background-color: #3a86ff;
-    cursor: pointer;
-}
-
